--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a class="intro__button" href=#>Try It Free</a>
             </header>
             <section class="about">
-                <div class="wrapper">
+                <div class="about-wrapper">
                     <h1 class="about__h">
                         Build The Community Your Fans Will Love
                     </h1>
@@ -37,41 +37,47 @@
                 <figure class="feature__img">
                     <img src="images/illustration-grow-together.svg">
                 </figure>
-                <h2 class="feature__h">
-                    Grow Together
-                </h2>
-                <p class="feature__p">
-                    Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.
-                </p>
+                <div class="feature-text-wrapper">
+                    <h2 class="feature__h">
+                        Grow Together
+                    </h2>
+                    <p class="feature__p">
+                        Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.
+                    </p>
+                </div>
             </div>
-            <div class="feature">
+            <div class="feature feature--reverse">
                 <figure class="feature__img">
                     <img src="images/illustration-flowing-conversation.svg">
                 </figure>
-                <h2 class="feature__h">
-                    Flowing Conversations
-                </h2>
-                <p class="feature__p">
-                    You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.
-                </p>
+                <div class="feature-text-wrapper">
+                    <h2 class="feature__h">
+                        Flowing Conversations
+                    </h2>
+                    <p class="feature__p">
+                        You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.
+                    </p>
+                </div>
             </div>
             <div class="feature">
                 <figure class="feature__img">
                     <img src="images/illustration-your-users.svg">
                 </figure>
-                <h2 class="feature__h">
-                    Your Users
-                </h2>
-                <p class="feature__p">
-                    It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.
-                </p>
+                <div class="feature-text-wrapper">
+                    <h2 class="feature__h">
+                        Your Users
+                    </h2>
+                    <p class="feature__p">
+                        It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.
+                    </p>
+                </div>
             </div>
         </section>
         <section class="call-to-action">
             <h1 class="call-to-action__h">
                 Ready To Build Your Community?
             </h1>
-            <a class="call-to-action__button">Get Started For Free</a>
+            <a href="#" class="call-to-action__button">Get Started For Free</a>
         </section>
         <footer>
             <section class="grid">
@@ -88,7 +94,7 @@
                     <img src="images/icon-email.svg">
                 </figure>
                 <p class="grid__item grid__item--item5">
-                    Lorem ipsum dolor sit <!-- amet consectetur adipisicing elit. Earum placeat eos tenetur ratione quo distinctio esse! -->
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum placeat eos tenetur ratione quo distinctio esse!
                 </p>
                 <p class="grid__item grid__item--item6">
                     +1-543-123-4567
@@ -99,22 +105,22 @@
                 <p class="grid__item grid__item--item8 copyright">
                     &copy; Copyright 2018 Huddle. All rights reserved.
                 </p>
-                <a class="grid__item grid__item--item9">
+                <a class="grid__item grid__item--item9" href="#">
                     About Us
                 </a>
-                <a class="grid__item grid__item--item10">
+                <a class="grid__item grid__item--item10" href="#">
                     What We Do
                 </a>
-                <a class="grid__item grid__item--item11">
+                <a class="grid__item grid__item--item11" href="#">
                     FAQ
                 </a>
-                <a class="grid__item grid__item--item12">
+                <a class="grid__item grid__item--item12" href="#">
                     Career
                 </a>
-                <a class="grid__item grid__item--item13">
+                <a class="grid__item grid__item--item13" href="#">
                     Blog
                 </a>
-                <a class="grid__item grid__item--item14">
+                <a class="grid__item grid__item--item14" href="#">
                     Contact Us
                 </a>
                 <div class="grid__item grid__item--item15">
