--- a/index.html
+++ b/index.html
@@ -1,135 +1,444 @@
-<!DOCTYPE html>
-<html lang="eng">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width" initial-scale="1.0">
-        <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-        <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-        <link rel="stylesheet" href="main.css">
-        <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
-    </head>
-    <body>
-        <div class="background">
-            <header class="intro">
-                <figure class="intro__logo">
-                    <img src="images/logo.svg">
-                </figure>
-                <a class="intro__button" href=#>Try It Free</a>
-            </header>
-            <section class="about">
-                <div class="about-wrapper">
-                    <h1 class="about__h">
-                        Build The Community Your Fans Will Love
-                    </h1>
-                    <p class="about__p">
-                        Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.
-                    </p>
-                    <a class="about__button" href="#">Get Started For Free</a>
-                </div>
-                <figure class="about__image">
-                    <img src="images/illustration-mockups.svg">
-                </figure>
-            </section>
-        </div>
-        <section class="feature-wrapper">
-            <div class="feature">
-                <figure class="feature__img">
-                    <img src="images/illustration-grow-together.svg">
-                </figure>
-                <div class="feature-text-wrapper">
-                    <h2 class="feature__h">
-                        Grow Together
-                    </h2>
-                    <p class="feature__p">
-                        Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.
-                    </p>
-                </div>
-            </div>
-            <div class="feature feature--reverse">
-                <figure class="feature__img">
-                    <img src="images/illustration-flowing-conversation.svg">
-                </figure>
-                <div class="feature-text-wrapper">
-                    <h2 class="feature__h">
-                        Flowing Conversations
-                    </h2>
-                    <p class="feature__p">
-                        You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.
-                    </p>
-                </div>
-            </div>
-            <div class="feature">
-                <figure class="feature__img">
-                    <img src="images/illustration-your-users.svg">
-                </figure>
-                <div class="feature-text-wrapper">
-                    <h2 class="feature__h">
-                        Your Users
-                    </h2>
-                    <p class="feature__p">
-                        It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.
-                    </p>
-                </div>
-            </div>
-        </section>
-        <section class="call-to-action">
-            <h1 class="call-to-action__h">
-                Ready To Build Your Community?
-            </h1>
-            <a href="#" class="call-to-action__button">Get Started For Free</a>
-        </section>
-        <footer>
-            <section class="grid">
-                <figure class="grid__item grid__item--item1">
-                    <img src="images/logo.svg">
-                </figure>
-                <figure class="grid__item grid__item--item2">
-                    <img src="images/icon-location.svg">
-                </figure>
-                <figure class="grid__item grid__item--item3">
-                    <img src="images/icon-phone.svg">
-                </figure>
-                <figure class="grid__item grid__item--item4">
-                    <img src="images/icon-email.svg">
-                </figure>
-                <p class="grid__item grid__item--item5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum placeat eos tenetur ratione quo distinctio esse!
-                </p>
-                <p class="grid__item grid__item--item6">
-                    +1-543-123-4567
-                </p>
-                <p class="grid__item grid__item--item7">
-                    example@fylo.com
-                </p>
-                <p class="grid__item grid__item--item8 copyright">
-                    &copy; Copyright 2018 Huddle. All rights reserved.
-                </p>
-                <a class="grid__item grid__item--item9" href="#">
-                    About Us
-                </a>
-                <a class="grid__item grid__item--item10" href="#">
-                    What We Do
-                </a>
-                <a class="grid__item grid__item--item11" href="#">
-                    FAQ
-                </a>
-                <a class="grid__item grid__item--item12" href="#">
-                    Career
-                </a>
-                <a class="grid__item grid__item--item13" href="#">
-                    Blog
-                </a>
-                <a class="grid__item grid__item--item14" href="#">
-                    Contact Us
-                </a>
-                <div class="grid__item grid__item--item15">
-                    <a class="social" href="#"><ion-icon name="logo-youtube"></ion-icon></a>
-                    <a class="social" href="#"><ion-icon name="logo-instagram"></ion-icon></a>
-                    <a class="social" href="#"><ion-icon name="logo-twitter"></ion-icon></a>
-                </div>
-            </section>
-        </footer>
-        <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
-    </body>
-</html>
+
+/* CSS Reset */
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Main CSS */
+
+a {
+    text-decoration: none;
+}
+img {
+    max-width: 100%;
+}
+body {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 18px;
+    line-height: 1.5;
+    box-sizing: border-box;
+}
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+}
+h1 {
+    font-size: 1.4em;
+}
+h2 {
+    font-size: 1.2em;
+}
+.background {
+    background-image: url(images/bg-hero-mobile.svg);
+    background-color: hsl(193, 100%, 96%);
+}
+
+/* Intro Section */
+
+.intro {
+    width: 85%;
+    margin: 0 auto;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
+    padding: 25px 0;
+}
+.intro__logo, .intro__button {
+    width: 33.3%;
+}
+.intro__button {
+    color: black;
+    font-size: 0.75em;
+    font-weight: bold;
+    background-color: white;
+    padding: 7.5px 7.5px;
+    border-radius: 50px;
+    box-shadow: 0 0 20px 5px hsla(228, 0%, 95%, 1);
+}
+.intro__button:hover {
+    background-color: hsla(228, 0%, 90%, 1);
+}
+
+/* About Section */
+
+.about {
+    width: 85%;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 30px;
+    margin: 50px auto 0 auto;
+    text-align: center;
+}
+.about__p {
+    margin-top: 20px;
+}
+.about__button {
+    width: 85%;
+    font-size: 0.75em;
+    font-weight: bold;
+    color: white;
+    background-color: hsl(322, 100%, 66%);
+    border-radius: 50px;
+    display: block;
+    padding: 12.5px 0;
+    margin: 30px auto 50px auto;
+    box-shadow: 0 5px 20px 5px hsla(228, 0%, 90%, 1);
+}
+.about__button:hover {
+    background-color: hsl(322, 81%, 50%);
+}
+
+/* Feature Section */
+
+.feature-wrapper {
+    width: 90%;
+    margin: 0 auto;
+}
+.feature {
+    border-radius: 15px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    margin: 50px auto 100px auto;
+    padding: 70px 0 40px 0;
+    box-shadow: 0 0 20px 5px hsla(228, 0%, 95%, 1);
+}
+.feature__img, .feature__p {
+    margin: 0 auto;
+    text-align: center;
+}
+.feature__img {
+    width: 75%;
+    margin: 0 auto;
+}
+.feature__p {
+    width: 85%;
+    color: hsl(208, 11%, 55%);
+}
+.feature__h {
+    width: 85%;
+    margin: 40px auto 20px auto;
+}
+
+/* Call To Action Section */
+
+.call-to-action {
+    width: 92.5%;
+    margin: 100px auto 25px auto;
+    text-align: center;
+    border-radius: 15px;
+    box-shadow: 0 0 20px 5px hsla(228, 0%, 95%, 1);
+    padding: 50px 0;
+    position: relative;
+    top: 90px;
+    background-color: white;
+}
+.call-to-action__h {
+    font-size: 1em;
+    margin-bottom: 30px;
+}
+.call-to-action__button {
+    font-size: 0.75em;
+    font-weight: bold;
+    color: white;
+    background-color: hsl(322, 100%, 66%);
+    border-radius: 50px;
+    padding: 15px 40px;
+    box-shadow: 0 5px 20px 5px hsla(228, 0%, 85%, 1);
+}
+.call-to-action__button:hover {
+    background-color: hsl(322, 81%, 50%);
+}
+
+/* General Footer */
+
+footer {
+    background-color: hsl(192, 100%, 9%);
+    color: hsl(0, 0%, 90%);
+}
+.copyright {
+    font-size: 0.75em;
+}
+a.grid__item {
+    color: hsl(0, 0%, 90%);
+}
+a.grid__item:hover {
+    color: white;
+}
+
+/* Footer Grid */
+
+.grid {
+    width: 90%;
+    margin: 0 auto;
+    padding: 150px 0 50px 0;
+    display: grid;
+    grid-template-columns: 40px 1fr;
+    grid-template-rows: repeat(3, auto) 65px repeat(5, auto) 65px repeat(2, auto);
+    grid-row-gap: 20px;
+}
+.grid__item--item1, .grid__item--item8, .grid__item--item9, .grid__item--item10, .grid__item--item11, .grid__item--item12, .grid__item--item13, .grid__item--item14, .grid__item--item15 {
+    grid-column: 1/3;
+}
+.grid__item--item9, .grid__item--item10, .grid__item--item11, .grid__item--item12, .grid__item--item13, .grid__item--item14 {
+    width: 35%;
+}
+.grid__item--item1 {
+    filter: brightness(0) invert(1); /* Changes logo to display as white */
+    width: 50%;
+}
+.grid__item--item2 {
+    grid-area: 2/1/3/2;
+}
+.grid__item--item3 {
+    grid-area: 3/1/4/2;
+}
+.grid__item--item4 {
+    grid-area: 4/1/5/2;
+}
+.grid__item--item5 {
+    grid-area: 2/2/3/3;
+}
+.grid__item--item8 {
+    grid-row: 12/13;
+    justify-self: center;
+}
+.grid__item--item15 {
+    justify-self: center;
+}
+.grid__item--item15 a {
+    color: white;
+    font-size: 40px;
+    padding: 0 10px;
+}
+@media screen and (min-width: 550px) {
+
+    /* Intro Section */
+
+    .intro {
+        padding: 35px 0;
+    }
+
+    /* Call To Action Section */
+
+    .call-to-action {
+        width: 508px;
+    }
+
+    /* Grid Section */
+
+    .grid__item--item5 {
+        width: 70%;
+    }
+}
+@media screen and (min-width: 768px) {
+
+    body {
+        font-size: 22px;
+    }
+    .intro {
+        padding: 50px 0;
+    }
+}
+@media screen and (min-width: 1024px) {
+
+    .background {
+        background-image: url(images/bg-hero-desktop.svg);
+    }
+
+    /* Intro Section */
+
+    .intro__logo {
+        width: 20%;
+    }
+    .intro__button {
+        width: 20%;
+    }
+    .grid__item--item9, .grid__item--item10, .grid__item--item11, .grid__item--item12, .grid__item--item13, .grid__item--item14 {
+        width: 75%;
+    }
+
+    /* About Section*/
+
+    .about {
+        flex-direction: row;
+        justify-content: space-between;
+        text-align: left;
+    }
+    .about-wrapper {
+        width: 40%;
+    }
+    .about__p {
+        font-size: 0.8em;
+    }
+    .about__button {
+        text-align: center;
+        margin: 30px 0 50px 0;
+    }
+    .about__image {
+        width: 50%;
+    }
+
+    /* Feature Section */
+
+    .feature {
+        flex-direction: row-reverse;
+        align-items: center;
+    }
+    .feature--reverse {
+        flex-direction: row;
+    }
+    .feature-text-wrapper {
+        width: 60%;
+    }
+    .feature__h, .feature__p {
+        text-align: left;
+    }
+    .feature__h {
+        margin: 0 auto 20px auto;
+    }
+    .feature__p {
+        font-size: 0.8em;
+    }
+    .feature__img {
+        width: 30%;
+    }
+
+    /* Call To Action Section */
+
+    .call-to-action {
+        width: 650px;
+    }
+    .call-to-action__h {
+        font-size: 1.3em;
+    }
+
+    /* Footer Grid */
+
+    .grid {
+        width: 85%;
+        grid-template-columns: 40px 40% repeat(3, 1fr);
+        grid-template-rows: repeat(6, auto);
+        font-size: 0.75em;
+    }
+    .grid__item--item12, .grid__item--item13, .grid__item--item14 {
+        grid-column: auto;
+    }
+    .grid__item--item1 {
+        grid-area: 1/1/2/6;
+    }
+    .grid__item--item2 {
+        grid-area: 2/1/4/2;
+    }
+    .grid__item--item3 {
+        grid-area: 4/1/5/2;
+    }
+    .grid__item--item4 {
+        grid-area: 5/1/6/2;
+    }
+    .grid__item--item5 {
+        grid-area: 2/2/4/3;
+        padding-right: 100px;
+    }
+    .grid__item--item6 {
+        grid-area: 4/2/5/3;
+    }
+    .grid__item--item7 {
+        grid-area: 5/2/6/3;
+    }
+    .grid__item--item8 {
+        grid-area: 6/5/7/6;
+        justify-self: start;
+    }
+    .grid__item--item9 {
+        grid-area: 2/3/3/4;
+    }
+    .grid__item--item10 {
+        grid-area: 3/3/4/4;
+    }
+    .grid__item--item11 {
+        grid-area: 4/3/5/4;
+    }
+    .grid__item--item15 {
+        grid-area: 2/5/6/6;
+        justify-self: start;
+        align-self: start;
+    }
+    .grid__item--item15 a {
+        font-size: 25px;
+        padding: 0;
+    }
+}
+@media screen and (min-width: 1440px) {
+
+    /* About Section */
+
+    .about__h {
+        width: 90%;
+        font-size: 1.6em;
+    }
+    .about__button {
+        width: 65%;
+    }
+
+    /* Call To Action Section */
+
+    .call-to-action {
+        padding: 70px 0;
+    }
+    .call-to-action__h {
+        margin-bottom: 50px;
+    }
+    .call-to-action__button {
+        padding: 20px 60px;
+    }
+
+    /* Footer Grid */
+
+    .grid__item--item9, .grid__item--item10, .grid__item--item11, .grid__item--item12, .grid__item--item13, .grid__item--item14 {
+        width: 50%;
+    }
+}
